# learn-openai-chatkit-self-hosted

./: README.md
01-basic-chatkit-setup/: README.md
01-basic-chatkit-setup/backend/: README.md
01-basic-chatkit-setup/backend/app/: chat.py  main.py
01-basic-chatkit-setup/frontend/: .env.example  README.md  package.json
01-basic-chatkit-setup/frontend/app/: page.tsx
01-basic-chatkit-setup/frontend/components/: ChatKitPanel.tsx
02-theming-customization/: README.md
02-theming-customization/backend/app/: chat.py  memory_store.py
02-theming-customization/frontend/app/: globals.css  page.tsx
02-theming-customization/frontend/components/: ChatInput.tsx  WelcomeScreen.tsx
03-implementing-widgets/: README.md
03-implementing-widgets/backend/: .env.example  .gitignore  pyproject.toml
03-implementing-widgets/backend/app/: chat.py  main.py
03-implementing-widgets/frontend/: README.md  package-lock.json  package.json
03-implementing-widgets/frontend/app/: layout.tsx  page.tsx
03-implementing-widgets/frontend/components/: ChatKitPanel.tsx
